--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ h2 {
   color: rgb(235, 0, 195);
 }
 
-#container,
-#container2 {
+.container{
   color: blueviolet;
   font-family: "Times New Roman", Times, serif;
   font-weight: bolder;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .btn {
