--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h2 {
   color: rgb(235, 0, 195);
 }
 
-.container{
+.container {
   color: blueviolet;
   font-family: "Times New Roman", Times, serif;
   font-weight: bolder;
@@ -125,6 +125,8 @@ h2 {
 }
 
 #progressbar {
+  display: flex;
+  align-items: flex-end;
   width: 20px;
   height: 10px;
   border: 0 2px solid gold;
